# FidelFolio-DL-Valuation-Project

./: README.md  implementation_details.md  main.py  pyproject.toml  setup.py
config/: config.yaml  test_config.yaml
experiments/: MLP_FIDELFOLIO.ipynb
src/data/: __init__.py  loader.py  preprocessing.py
src/features/: __init__.py  engineering.py  sequences.py
src/models/: __init__.py  encoder_decoder.py  lstm.py  mlp.py
src/utils/: config_loader.py  logger.py
